Revision history for Perl extension Class-Inspector

1.30 23 Nov 2016
  - Moving to prod release

1.29_02 23 Nov 2016
  - Update metadata to point to github repository.
    Plus some other minor dist meta tweaks.
  - Note: planning on doing a migration from Module::Install
    to ExtUtils::MakeMaker shortly AFTER the next production
    release.

1.29_01 22 Nov 2016
  - Fix Makefile.PL to work with Perls without '.' in @INC
  - Fix for the installed method when used with a PAR archive (rt#42846)
  - Minor documentation fixes (grammar, spelling: rt#74481, rt#85356)

1.28 Fri 19 Oct 2012
  - No functional changes
  - Updating to Module::Install::DSL 1.06

1.27 Wed 25 Jan 2012
  - Moving to prod release

1.26_01 Tue 24 Jan 2012
  - Updating to Module::Install::DSL 1.04
  - Updating copyright year
  - Remove usage of defined @{"X::ISA"} to avoid warnings in 5.15.7
    and later Perl 5.16 (Tom Wyant)

1.25 Thu 27 Jan 2011
  - Updating to Module::Install::DSL 1.00
  - Updating copyright year

1.24 Tue 21 Apr 2009
  - Updating Perl dependency to 5.006
  - Updating to Module::Install::DSL 0.83
  - Add the Class::Inspector::Functions interface.

1.23 Mon  2 Jun 2008
  - No functional changes
  - Updating to Module::Install 0.75
  - Correcting the location of the author tests

1.22 Sat  1 Mar 2008
  - 1.21_01 tested ok, moving to production version
  - No changes

1.21_01 Tue 12 Feb 2008
  - Adding experimental support for utf8 methods
    (as per http://rt.cpan.org/Public/Bug/Display.html?id=28796)

1.20 Tue 12 Feb 2008
  - CPAN Testers results look good for 1.19_01,
    converting to a production release.

1.19_01 Mon 11 Feb 2008
  - Bug fix to adapt to changes to File::Spec

1.18 Thu  8 Nov 2007
  - Incremental release, no functional changes
  - Updated to Module::Install 0.68
    (This brings META.yml to the current version)
  - Updated versions of the automated tests that
    were causing CPAN Testers failures.

1.17 Mon  6 Aug 2007