@@ -1,9 +1,2 @@
-/MANIFEST
-/MYMETA.*
-/META.*
-/Makefile
-/blib
-/inc
-/pm_to_blib
-/*.bak
 /Class-Inspector-*
+/.build
