@@ -1,0 +1,36 @@
+name = Class-Inspector
+author = Graham Ollis <plicease@cpan.org>
+author = Adam Kennedy <adamk@cpan.org>
+license = Perl_5
+copyright_holder = Adam Kennedy
+copyright_year = 2016
+version = 1.30
+
+[@Author::Plicease]
+:version      = 2.10
+travis_status = 1
+
+[Prereqs / TestPrereqs]
+-phase = test
+; TODO: this gets overridden with 0.94
+Test::More = 0.47
+
+[Prereqs]
+File::Spec = 0.80
+
+[RemovePrereqs]
+; comes with Perl 5.6.0 or better
+remove = strict
+remove = warnings
+remove = vars
+remove = Exporter
+remove = constant
+
+[Author::Plicease::Upload]
+cpan = 1
+
+[Author::Plicease::Thanks]
+current = Graham Ollis <plicease@cpan.org>
+original = Adam Kennedy <adamk@cpan.org>
+contributor = Tom Wyant
+contributor = Steffen Müller
